Styling keyboard and output section

--- a/javaScript/calcJs/index.html
+++ b/javaScript/calcJs/index.html
@@ -18,16 +18,37 @@
             <div id="result">
 
                 <div id="history">
-
+                    <p id="his-val">3*5</p>
                 </div>
 
                 <div id="output">
-                    
+                    <p id="output-val">15</p>
                 </div>
 
             </div>
 
             <div id="keyboard">
+
+                <button id="clear" class="operator">C</button>
+                <button id="backspace" class="operator">CE</button>
+                <button id="%" class="operator">%</button>
+                <button id="/" class="operator">&#247</button>
+                <button id="7" class="number">7</button>
+                <button id="8" class="number">8</button>
+                <button id="9" class="number">9</button>
+                <button id="*" class="operator">*</button>
+                <button id="4" class="number">4</button>
+                <button id="5" class="number">5</button>
+                <button id="6" class="number">6</button>
+                <button id="-" class="operator">-</button>
+                <button id="1" class="number">1</button>
+                <button id="2" class="number">2</button>
+                <button id="3" class="number">3</button>
+                <button id="+" class="operator">+</button>
+                <button id="0" class="number"></button>
+                <button id="clear" class="number">0</button>
+                <button id="empty" class="number"></button>
+                <button id="=" class="operator">=</button>
 
             </div>
 
