Coma-separated value logic

--- a/javaScript/calcJs/index.html
+++ b/javaScript/calcJs/index.html
@@ -18,7 +18,7 @@
             <div id="result">
 
                 <div id="history">
-                    <p id="his-val">3*5</p>
+                    <p id="hist-val">3*5</p>
                 </div>
 
                 <div id="output">
